musicapp-helm/prometheus-chart/templates/node-exporter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  containers:
    - name: node-exporter
      image: quay.io/prometheus/node-exporter:v1.9.1
      args:
        - "--path.procfs=/proc"
        - "--path.sysfs=/sys"
        - "--no-collector.mountstats"
      ports:
        - containerPort: 9100
          name: metrics
      securityContext:
        runAsUser: 65534
        runAsNonRoot: true
